syntax = "proto3";

package jobPost;

message CountJobPostInterestedRequest { string jobPostId = 1; }

message CountJobPostInterestedResponse { int32 interestedCount = 1; }