syntax = "proto3";

package jobPost;

message GetMyInterestedJobPostRequest {
  string jobPostId = 1;
  string userId = 2;
}

message GetMyInterestedJobPostResponse {
  InterestedJobPost interestedJobPost = 1;
}